<?xml version="1.0" encoding="utf-8"?>
<!-- Parent linear layout with vertical orientation -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:orientation="vertical" >
    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="10"
        android:src="@drawable/logo"/>

  

        <EditText
            android:id="@+id/playerId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/action_user_hint_Id"
            android:inputType="number" >

        </EditText>

        <EditText
            android:id="@+id/playerSecret"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/action_user_hint_Secret"
            android:inputType="text" 
            />

        <Button
            android:id="@+id/button_enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/red_button"
            style="@style/button_text" 
            android:layout_weight="1"
            android:layout_gravity="right"
            android:text="@string/action_user_info" />
</LinearLayout>
    

</RelativeLayout>